crates/aranya-policy-compiler/tests/data/type_errors/emit_non_effect_invalid_type.fail.snap
---
source: crates/aranya-policy-compiler/tests/tests.rs
expression: error
---
error: invalid type: int
  |
6 |             emit 0
  |                  ^ expected `struct T` but found `int`
